<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_more_photos_channel_name">Photo access</string>
    <string name="select_more_photos_title">Select more photos</string>
    <string name="select_more_photos_text">Your Mac asked for more photos than you shared.</string>
    <string name="files_offer_channel_name">Incoming files</string>
    <string name="files_offer_title">Incoming file</string>
    <string name="files_offer_text">%1$s (%2$s)</string>
    <string name="files_offer_accept">Accept</string>
    <string name="files_offer_decline">Decline</string>
    <string name="files_progress_channel_name">File transfers</string>
    <string name="files_progress_title">Transferring file</string>
    <string name="files_progress_text">%1$d%% · %2$s/s</string>
    <string name="files_progress_cancel">Cancel</string>
    <string name="files_received_channel_name">Received files</string>
    <string name="files_received_title">%1$s</string>
    <string name="files_received_text">Received. Tap to open.</string>
    <string name="files_send_started">Sending to Mac…</string>
    <string name="files_send_sent">Sent to Mac.</string>
    <string name="files_send_rejected">Mac declined the file.</string>
    <string name="files_send_failed">Couldn\'t send the file.</string>
    <string name="files_send_not_connected">Not connected to your Mac.</string>
</resources>
